<resources>
    <string name="app_name">Arvi</string>
    <string name="please_wait">Please wait</string>
    <string name="check_internet">Please check your internet connection</string>
    <string name="work_in_progress">Work in progress</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="toggle_turn_on">Front</string>
    <string name="toggle_turn_off">Back</string>
    <string name="desc_camera_source_activity">Vision detectors demo with live camera preview</string>
    <string name="desc_still_image_activity">Vision detectors demo with a still image</string>
    <string name="desc_image_convert_activity">Image format conversions testing Activity</string>
    <string name="desc_sdk_doctor_activity">SDK Doctor testing Activity</string>
    <string name="desc_model_download_activity">Custom Model Download testing Activity</string>
    <string name="download_error">Download error</string>
    <string name="start_over">Start over</string>
    <string name="menu_item_settings">Settings</string>
    <string name="pref_screen_title_live_preview">Live preview settings</string>
    <string name="pref_screen_title_still_image">Still image settings</string>
    <string name="pref_category_face_detection">Face detection</string>
    <string name="pref_category_object_detection">Object detection</string>
    <string name="pref_category_automl">AutoML Image Labeling</string>
    <string name="pref_category_key_camera" translatable="false">pckc</string>
    <string name="pref_category_title_camera">Camera</string>
    <string name="pref_key_rear_camera_preview_size" translatable="false">rcpvs</string>
    <string name="pref_key_rear_camera_picture_size" translatable="false">rcpts</string>
    <string name="pref_key_front_camera_preview_size" translatable="false">fcpvs</string>
    <string name="pref_key_front_camera_picture_size" translatable="false">fcpts</string>
    <string name="pref_key_camera_live_viewport" translatable="false">clv</string>
    <string name="pref_title_rear_camera_preview_size">Rear camera preview size</string>
    <string name="pref_title_front_camera_preview_size">Front camera preview size</string>
    <string name="pref_title_camera_live_viewport">Enable live viewport</string>
    <string name="pref_summary_camera_live_viewport">Do not block camera preview drawing on detection</string>
    <string name="pref_title_object_detector_enable_multiple_objects">Enable multiple objects</string>
    <string name="pref_key_live_preview_object_detector_enable_multiple_objects" translatable="false">lpodemo</string>
    <string name="pref_key_still_image_object_detector_enable_multiple_objects" translatable="false">siodemo</string>
    <string name="pref_title_object_detector_enable_classification">Enable classification</string>
    <string name="pref_key_live_preview_object_detector_enable_classification" translatable="false">lpodec</string>
    <string name="pref_key_still_image_object_detector_enable_classification" translatable="false">siodec</string>
    <string name="pref_title_face_detector_landmark_mode">Landmark mode</string>
    <string name="pref_key_live_preview_face_detection_landmark_mode" translatable="false">lpfdlm</string>
    <string name="pref_entries_face_detector_landmark_mode_no_landmarks">No landmarks</string>
    <string name="pref_entries_face_detector_landmark_mode_all_landmarks">All landmarks</string>
    <string name="pref_entry_values_face_detector_landmark_mode_no_landmarks" translatable="false">1</string>
    <string name="pref_entry_values_face_detector_landmark_mode_all_landmarks" translatable="false">2</string>
    <string name="pref_title_face_detector_contour_mode">Contour mode</string>
    <string name="pref_key_live_preview_face_detection_contour_mode" translatable="false">lpfdcm</string>
    <string name="pref_entries_face_detector_contour_mode_no_contours">No contours</string>
    <string name="pref_entries_face_detector_contour_mode_all_contours">All contours</string>
    <string name="pref_entry_values_face_detector_contour_mode_no_contours" translatable="false">1</string>
    <string name="pref_entry_values_face_detector_contour_mode_all_contours" translatable="false">2</string>
    <string name="pref_title_face_detector_classification_mode">Classification mode</string>
    <string name="pref_key_live_preview_face_detection_classification_mode" translatable="false">lpfdcfm</string>
    <string name="pref_entries_face_detector_classification_mode_no_classifications">No classifications</string>
    <string name="pref_entries_face_detector_classification_mode_all_classifications">All classifications</string>
    <string name="pref_entry_values_face_detector_classification_mode_no_classifications" translatable="false">1</string>
    <string name="pref_entry_values_face_detector_classification_mode_all_classifications" translatable="false">2</string>
    <string name="pref_title_face_detector_performance_mode">Performance mode</string>
    <string name="pref_key_live_preview_face_detection_performance_mode" translatable="false">lpfdpm</string>
    <string name="pref_entries_face_detector_performance_mode_fast">Fast</string>
    <string name="pref_entries_face_detector_performance_mode_accurate">Accurate</string>
    <string name="pref_entry_values_face_detector_performance_mode_fast" translatable="false">1</string>
    <string name="pref_entry_values_face_detector_performance_mode_accurate" translatable="false">2</string>
    <string name="pref_title_face_detector_face_tracking">Face tracking</string>
    <string name="pref_key_live_preview_face_detection_face_tracking" translatable="false">lpfdft</string>
    <string name="pref_title_face_detector_min_face_size">Minimum face size</string>
    <string name="pref_key_live_preview_face_detection_min_face_size" translatable="false">lpfdmfs</string>
    <string name="pref_dialog_message_face_detector_min_face_size">Proportion of the head width to the image width, and the valid value range is [0.0, 1.0]</string>
    <string name="pref_toast_invalid_min_face_size">Minimum face size must be a float value and in the range [0.0, 1.0]</string>
    <string name="pref_title_automl_remote_model_name">AutoML Remote Model Name</string>
    <string name="pref_key_live_preview_automl_remote_model_name" translatable="false">lparmn</string>
    <string name="pref_dialog_message_automl_remote_model_name">Remote model name in the Firebase Console.</string>
    <string name="pref_title_automl_model_choices">AutoML Model Choices</string>
    <string name="pref_entries_automl_models_remote">Remote</string>
    <string name="pref_entries_automl_models_local">Local</string>
    <string name="pref_key_live_preview_automl_remote_model_choices" translatable="false">lparmc</string>
    <string name="low_risk">is at low risk of infection</string>
    <string name="moderate_risk">is at moderate risk of infection</string>
    <string name="high_risk">is at high risk of infection</string>
    <string name="tested_positive_status">has tested positive for COVID-19</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="arvi_technologies_ttl">Arvi technologies</string>
    <string name="company_name_ttl">Company Name</string>
    <string name="address_ttl">Address</string>
    <string name="gst_no_ttl">GST No</string>
    <string name="plan_type_ttl">Plan Type</string>
    <string name="total_employees_ttl">Total Employees</string>
    <string name="view_list_ttl">(View list)</string>
    <string name="employees_ttl">Employees</string>
    <string name="active_ttl">Active</string>
    <string name="inactive_ttl">Inactive</string>
    <string name="add_employees_detail_ttl">Add employee details</string>
    <string name="employee_id_ttl">Employee ID</string>
    <string name="name_ttl">Name</string>
    <string name="designation_ttl">Designation</string>
    <string name="mobile_ttl">Mobile</string>
    <string name="mail_ttl">Mail (Official)</string>
    <string name="logout_ttl">Logout</string>
    <string name="logout_message">Are you sure you want to Logout?</string>
    <string name="cancel">Cancel</string>
    <string name="expected_ttl">Expected</string>
    <string name="screened_ttl">Screened</string>
    <string name="page_dashboard">Dashboard</string>
    <string name="page_selfiCheckIn">Selfi CheckIn</string>
    <string name="page_visitor">Visitor</string>
    <string name="page_request">Requests</string>
    <string name="page_profile">Profile</string>
    <string name="front_facing">Front Facing</string>
    <string name="back_facing">Back Facing</string>
    <string-array name="default_emp">
        <item>Emp 1</item>
        <item>Emp 2</item>
        <item>Emp 3</item>
        <item>Emp 4</item>
    </string-array>
    <string-array name="default_leave_type">
        <item>All Day</item>
        
    </string-array>
    <string-array name="default_server_url">
        <item>Developer Server</item>
        <item>QA Server</item>
    </string-array>
    <string-array name="default_screen_admin_lite">
        <item>@string/page_dashboard</item>
        <item>@string/page_selfiCheckIn</item>
        
        
        <item>@string/page_profile</item>
    </string-array>
    <string-array name="default_screen_visitor_mode">
        <item>@string/page_dashboard</item>
        
        <item>@string/page_visitor</item>
        
        <item>@string/page_profile</item>
    </string-array>
    <string-array name="default_app_mode">
        <item>@string/full_mode</item>
        
        <item>@string/admin_lite_mode</item>
        
        <item>@string/visitor_lite_mode</item>
    </string-array>
    <string name="full_mode">Full Admin</string>
    <string name="admin_lite_mode">Admin Lite</string>
    <string name="visitor_lite_mode">Visitor Lite</string>
    <string-array name="default_screen_option">
        <item>@string/page_dashboard</item>
        <item>@string/page_selfiCheckIn</item>
        <item>@string/page_visitor</item>
        <item>@string/page_request</item>
        <item>@string/page_profile</item>
    </string-array>
    <string-array name="camera_facing_option">
        <item>@string/front_facing</item>
        <item>@string/back_facing</item>
    </string-array>
    <string name="this_month">This Month</string>
    <string name="previous_month">Previous Month</string>
    <string name="custom_date">Custom Date</string>
    <string name="leave_ttl">Leave</string>
    <string name="wfh_ttl">WFH</string>
    <string name="regularization_ttl">Regularize</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="reload">Reload</string>
    <string name="no_mobile_data">You don\'t have mobile data</string>
    <string name="capture_the_face_in_the_border">Capture the face in the border</string>
    <string name="capture">Capture</string>
    <string-array name="period_array">
        <item>@string/this_month</item>
        <item>@string/previous_month</item>
        <item>@string/custom_date</item>
    </string-array>
</resources>