<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.ProfileFragment">


    <RelativeLayout
        android:id="@+id/rlMain"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp">

        <ImageView
            android:id="@+id/ivLogoutFP"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_10sdp"
            android:background="@drawable/ic_logout"
            android:elevation="@dimen/_8sdp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/arvi_technologies_ttl"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp" />

        <ImageView
            android:id="@+id/ivEditProfileFP"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@drawable/edit_pen" />
    </RelativeLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/rlMain"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:background="@color/lght_gry_text" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/view">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:id="@+id/rlProfPic"
                    android:layout_width="@dimen/_95sdp"
                    android:layout_height="@dimen/_70sdp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_8sdp">

                    <ImageView
                        android:id="@+id/ivProfilePicFP"
                        android:layout_width="@dimen/_70sdp"
                        android:layout_height="@dimen/_70sdp"
                        android:layout_centerInParent="true" />

                    <RelativeLayout
                        android:id="@+id/rlProfilePicFP"
                        android:layout_width="@dimen/_35sdp"
                        android:layout_height="@dimen/_35sdp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="@dimen/_35sdp"
                        android:background="@drawable/rounded_gray_boarder"
                        android:elevation="@dimen/_4sdp">

                        <ImageView
                            android:id="@+id/ivChooseProfilePicFP"
                            android:layout_width="@dimen/_20sdp"
                            android:layout_height="@dimen/_18sdp"
                            android:layout_centerInParent="true"
                            android:background="@drawable/camera_app" />

                    </RelativeLayout>

                </RelativeLayout>


                <View
                    android:id="@+id/viewProfile"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/rlProfPic"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:background="@color/lght_gry_text" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/viewProfile"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/avenir_next_bold"
                        android:text="@string/company_name_ttl"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13ssp"
                        android:visibility="gone" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tILComapnyNameFP"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8sdp">

                        <EditText
                            android:id="@+id/etComapnyNameFP"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/gotham_book_regular"
                            android:hint="@string/company_name_ttl"
                            android:singleLine="true"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_12ssp" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:fontFamily="@font/avenir_next_bold"
                        android:text="@string/address_ttl"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13ssp"
                        android:visibility="gone" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tILAddressFP"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8sdp">

                        <EditText
                            android:id="@+id/etAddressFP"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/gotham_book_regular"
                            android:hint="@string/address_ttl"
                            android:singleLine="true"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_12ssp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:fontFamily="@font/avenir_next_bold"
                        android:text="@string/gst_no_ttl"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13ssp"
                        android:visibility="gone" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tILGSTNOFP"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8sdp">

                        <EditText
                            android:id="@+id/etGSTNOFP"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/gotham_book_regular"
                            android:hint="@string/gst_no_ttl"
                            android:singleLine="true"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_12ssp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:fontFamily="@font/avenir_next_bold"
                        android:text="@string/plan_type_ttl"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13ssp"
                        android:visibility="gone" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tILPlanTypeFP"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8sdp">

                        <EditText
                            android:id="@+id/etPlanTypeFP"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/gotham_book_regular"
                            android:hint="@string/plan_type_ttl"
                            android:singleLine="true"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_12ssp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:fontFamily="@font/gotham_book_regular"
                        android:text="@string/total_employees_ttl"
                        android:textColor="@color/gray_clr"
                        android:textSize="@dimen/_12ssp" />

                    <TextView
                        android:id="@+id/tvTotalEmployeesFP"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:fontFamily="@font/gotham_book_regular"
                        android:hint="4"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13ssp" />


                    <TextView
                        android:id="@+id/tvUpdateFP"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:layout_marginTop="@dimen/_25sdp"
                        android:layout_marginRight="@dimen/_20sdp"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:background="@drawable/btn_bg"
                        android:fontFamily="@font/gotham_bold"
                        android:gravity="center"
                        android:text="Update"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_14ssp"
                        android:textStyle="bold" />

                    <!--
                                <RelativeLayout
                                    android:id="@+id/rlNextLA"
                                    android:layout_width="@dimen/_250sdp"
                                    android:layout_marginBottom="@dimen/_25sdp"
                                    android:layout_height="@dimen/_40sdp"
                                    android:layout_gravity="center_horizontal"
                                    android:layout_marginTop="@dimen/_10sdp"
                                    android:background="@drawable/grey_rounded_bg">

                                    <TextView
                                        android:background="@drawable/grey_rounded_bg"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:layout_marginTop="@dimen/_5sdp"
                                        android:layout_marginBottom="@dimen/_5sdp"
                                        android:layout_marginLeft="@dimen/_20sdp"
                                        android:layout_marginRight="@dimen/_20sdp"
                                        android:gravity="center"
                                        android:textSize="@dimen/_14ssp"
                                        android:text="Next"
                                        android:textColor="@color/white"
                                        android:textStyle="bold"
                                        android:fontFamily="@font/gotham_book_regular"
                                        />

                                </RelativeLayout>-->

                </LinearLayout>


            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>


</RelativeLayout>